# mcp-edgar-ux

./: .env.example  .gitignore  CLAUDE.md  DEVELOPER.md  Makefile  README.md  TASKS.md  bitter-edgar-mcp  cli  dev.py  pyproject.toml  run.sh
bitter_edgar/: cli.py  core.py  server.py  server_http.py
docs/: EDGARTOOLS_CAPABILITIES.md
edgar_ux_mcp/: server.py
mcp_edgar_ux/: cli.py  container.py  core.py  formatters.py  server.py  server_http.py
mcp_edgar_ux/adapters/: __init__.py  edgar.py  filesystem.py  search.py
mcp_edgar_ux/adapters/mcp/: __init__.py  handlers.py  tool_definitions.py
mcp_edgar_ux/core/: __init__.py  domain.py  ports.py  services.py
tests/: test_core.py  test_hexagonal.py  test_server.py
