[tool.poetry]
name = "edgar-lite-mcp"
version = "0.1.0"
description = "SEC EDGAR filings MCP server with formatted output. Caches to disk, progressive disclosure."
authors = ["bxxd <bxxd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "edgar_lite_mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
edgartools = "^4.0.0"
markdownify = "^0.13.0"

[tool.poetry.scripts]
edgar-lite-mcp = "edgar_lite_mcp.server:main"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
