[tool.poetry]
name = "edgar-ux-mcp"
version = "0.1.0"
description = "SEC EDGAR filings MCP server with agent-friendly UX. BBG Lite formatted output, progressive disclosure, disk caching."
authors = ["bxxd <bxxd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "edgar_ux_mcp"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
edgartools = "^4.0.0"
markdownify = "^0.13.0"

[tool.poetry.scripts]
edgar-ux-mcp = "edgar_ux_mcp.server:main"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
